--- a/RegistroAnalisis/SiteInicio.Master
+++ b/RegistroAnalisis/SiteInicio.Master
@@ -1,19 +1,128 @@
 ﻿<%@ Master Language="C#" AutoEventWireup="true" CodeBehind="SiteInicio.master.cs" Inherits="RegistroAnalisis.SiteInicio" %>
-
 <!DOCTYPE html>
 
+
+
 <html>
+
 <head runat="server">
+
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+
     <title></title>
+
+
+
     <asp:ContentPlaceHolder ID="head" runat="server">
+
     </asp:ContentPlaceHolder>
+
+<%-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"> --%>
+
+<link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" type="text/css"/> 
+
+<link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet" type="text/css"/> 
+
+<link href="Content/toastr.min.css" rel="stylesheet" />
+
+<%--<link href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/css/toastr.min.css" rel="stylesheet" type="text/css"/>--%>
+
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+
+<%--<script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/js/toastr.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>--%>
+
+<script src="Scripts/toastr.min.js"></script>
+
+
+
+
+
+
+
 </head>
+
 <body>
+
     <form id="form1" runat="server">
+
         <div>
-            <asp:ContentPlaceHolder ID="ContentPlaceHolder1" runat="server">
-            </asp:ContentPlaceHolder>
+
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+
+  <a class="navbar-brand" href="/Home.aspx"><img width="50px" height="50px" src="https://www.google.com/url?sa=i&rct=j&q=&esrc=s&source=images&cd=&ved=2ahUKEwj18Z6D28fkAhXBp1kKHf9XDVMQjRx6BAgBEAQ&url=https%3A%2F%2Fwww.flaticon.com%2Ffree-icon%2Fhospital_504276&psig=AOvVaw2msx-iA4jnDxW9yL5bTLIs&ust=1568254927524221" /></a>
+
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+
+    <span class="navbar-toggler-icon"></span>
+
+  </button>
+
+  <div class="collapse navbar-collapse" id="navbarNav">
+
+    <ul class="navbar-nav">
+
+      <li class="nav-item active">
+
+        <a class="nav-link" href="/Home.aspx">Inicio <span class="sr-only">(current)</span></a>
+
+      </li>
+
+      <li class="nav-item dropdown">
+
+        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+
+          Registros
+
+        </a>
+
+        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+
+          <a class="dropdown-item" href="/Registros/RegistroPacientes.aspx">Pacientes</a>
+
         </div>
+
+        </li>
+
+      <li class="nav-item dropdown">
+
+        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown2" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+
+          Consultas
+
+        </a>
+
+        <div class="dropdown-menu" aria-labelledby="navbarDropdown2">
+
+          <a class="dropdown-item" href="/Consultas/ConsultaUsuarios.aspx">Usuarios</a>
+
+          <a class="dropdown-item" href="#">Another action</a>
+        </div>
+
+        </li>
+  
+
+    </ul>
+
+  </div>
+
+</nav>
+
+<div class="container">
+
+            <asp:ContentPlaceHolder ID="ContentPlaceHolder1" runat="server">
+
+            </asp:ContentPlaceHolder>
+
+</div>
+
+        </div>
+
     </form>
+
 </body>
+
 </html>
